@@ -29,6 +29,10 @@ cdebconf (0.75) UNRELEASED; urgency=low
       this can go away.
     - Fix argument parsing in debconf-copydb, debconf-dumpdb, and
       dpkg-reconfigure.
+    - Implement -p/--pattern option in debconf-copydb and debconf-dumpdb.
+      Note that, unlike Perl debconf, this takes an extended regular
+      expression rather than a Perl regular expression, but it should be
+      close enough for most uses.
   * Joey Hess
     - Apply patch from Denis to fix rfc822db to not output empty Value fields
       if the value is not set. Closes: #257180
